@@ -69,6 +69,9 @@
 /* Define if you want support for dynamic linking. */
 #undef DYNAMIC_LINKING
 
+/* Define if dlsym automatically supplies a leading underscore. */
+#undef DLSYM_ADDS_USCORE
+
 /* Define if the operating system can restart system calls.  */
 #undef HAVE_RESTARTS
 
