@@ -1,3 +1,11 @@
+1997-11-21  Tim Pierce  <twp@twp.tezcat.com>
+
+	* acinclude.m4 (GUILE_DLSYM_USCORE): New macro, thanks Dan Hagerty
+	<hag@ai.mit.edu>.
+	* configure.in: Use it.
+	* configure: Regenerated.
+	* acconfig.h (DLSYM_ADDS_USCORE): New #define.
+	
 1997-10-26  Mikael Djurfeldt  <mdj@nada.kth.se>
 
 	* README (libtool): Tell people to use version 1.0e.
